refactor: API バージョンを v1 から v2 へ統一 & API設計を最新構成へ変更
- エンドポイントを /v1 から /v2 へ移行
- /legacy を /v2/legacy へ統一
- 共通エラーを導入
