# src/routes/v2/speakers/index.ts
@@ -1,0 +1,8 @@
+import { Router } from 'express';
+import { get } from './get';
+
+const speakersRouter = Router();
+
+speakersRouter.get('/', get);
+
+export default speakersRouter;
